# Meowcraft

./: CMakeLists.txt  README.md
includes/glad/: glad.h
libs/: glad.c  stb_image.cpp
modules/: FindGLFW3.cmake
src/: main.cpp
src/Application/: Application.cpp  Application.h
src/Assets/Shaders/: f.glsl  skyboxPassV.glsl  v.glsl
src/Block/: block.cpp  block.h
src/Camera/: Camera.cpp  Camera.h
src/Chunk/: chunk.cpp  chunk.h  chunkmanager.cpp  chunkmanager.h
src/ErrorHandling/: errorReporting.cpp  errorReporting.h
src/Shader/: Shader.cpp  Shader.h
src/Skybox/: skybox.cpp  skybox.h
src/Texture/: texture.cpp  texture.h  textureatlas.cpp  textureatlas.h
src/World/Block/: block.cpp  block.h  blockconstants.h
src/World/Chunk/: chunk.cpp  chunk.h  chunkconstants.h  chunkmanager.cpp  chunkmanager.h  chunkmesh.cpp  chunkmesh.h  chunkmeshbuilder.cpp  chunkmeshbuilder.h  chunksegment.cpp  chunksegment.h
